# APM

./: .gitignore  README.md  portfolio_sample.json  pyproject.toml
src/: IVOL.py  apm.py  apm_cli.py  marketHedge.py  multi_factor.py  singleFactor.py  volatility.py
tests/: test_market_hedge.py  test_single_factor.py
