[project]
name = "apm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas-datareader>=0.10.0",
    "polars>=1.36.1",
    "rich>=13.9.0",
    "setuptools>=68.0.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.0",
]
